changes to server for maintainability and stability
1. clients will now periodically try to reconnect if server goes down
2. server actively monitors for and deals with disconnecting clients
3. will no longer crash if sent messages that aren't valid json
4. better directory structure

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
         "name": "Noah Sandman",
         "email": "noah@modulytic.com"
     },
+    "type": "module",
     "dependencies": {
-        "ws": "*",
-        "getenv": "*"
+        "getenv": "*",
+        "reconnecting-websocket": "^4.4.0",
+        "ws": "*"
     },
     "scripts": {
-        "start": "node daemon.js"
+        "start": "node src/daemon.js"
     }
 }
