--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dependencies": {
         "getenv": "*",
         "reconnecting-websocket": "^4.4.0",
-        "ws": "*"
+        "ws": "*",
+        "is-docker": "*"
     },
     "scripts": {
         "start": "node src/app.js"
